# RT-DETR

./: pyproject.toml
output/rtdetrv2_r18vd_120e_coco/: log.txt
output/rtdetrv2_r18vd_120e_coco/summary/: events.out.tfevents.1766873197.Mohameds-MacBook-Pro-5.local.97426.0  events.out.tfevents.1766873328.Mohameds-MacBook-Pro-5.local.99940.0  events.out.tfevents.1766873522.Mohameds-MacBook-Pro-5.local.3353.0
rtdetrv2_pytorch/configs/dataset/: coco_detection.yml
rtdetrv2_pytorch/tools/: train.py
