[project]
name = "rt-detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-coco-eval>=1.7.0",
    "onnx>=1.20.0",
    "pycocotools>=2.0.11",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
